# actix_blog_example

./: CMakeLists.txt  Cargo.toml  LICENSE  README.md
app/: Cargo.toml
app/proc_for_actix/: Cargo.toml
app/proc_for_actix/src/: lib.rs
app/src/: api.rs  handler.rs  main.rs  middlewares.rs  routes.rs
app/src/api/: article.rs  home.rs  marco.rs  search.rs  users.rs
app/src/handler/: h_article.rs  h_home.rs  h_search.rs  h_users.rs
db/: .env  Cargo.toml
db/migrations/2019-03-28-110012_create_all_tables/: down.sql  up.sql
db/src/: lib.rs  models.rs  schema.rs
db/src/models/: m_articles.rs  m_categories.rs  m_comments.rs  m_pages.rs  m_tags.rs  m_tags_with_articles.rs  m_users.rs
resource/css/: main.css
view/: Cargo.toml
view/src/: views.rs
view/src/views/: view_article.rs  view_home.rs  view_search.rs  view_users.rs
view/templates/: articles_edit.html  articles_index.html  articles_new.html  articles_show.html  basic.html  foot.html  head.html  home_index.html  pagination.html  search_index.html  users_login.html
