[package]
name = "app"
version = "0.1.0"
authors = ["TigerInYourDreams <TigerInYourDream@hi.zy>"]
edition = "2018"

[dependencies]
actix-web = "0.7"
futures = "0.1"
env_logger = "0.6"
time = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
jsonwebtoken = "5"
comrak = "0.4"
ammonia = "1.2"

proc_for_actix = { path = "./proc_for_actix" }
db = { path = "../db" }
view = { path = "../view" }